# model_v2

model/: CMakeLists.txt  package.xml
model/costmap/: example_params.yaml
model/include/model/: controller.h  mapper.h
model/launch/: gazebo.launch  map_server.launch  nav.launch
model/src/: controller.cpp  map_service.cpp  mapper.cpp  pose_service.cpp  task.cpp  tf_broadcaster.cpp
model/srv/: TakeMap.srv  TakePose.srv
model/urdf/: slave.xacro  world.xacro
model/worlds/: custom.world
